// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list"
  >
    <div
      className="show-on-mobile"
    >
      Expenses
    </div>
    <div
      className="show-on-desktop"
    >
      Expense
    </div>
    <div
      className="show-on-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list__body"
  >
    <div
      className="list__item list__item-message"
    >
      <span>
        No Expenses Found
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list"
  >
    <div
      className="show-on-mobile"
    >
      Expenses
    </div>
    <div
      className="show-on-desktop"
    >
      Expense
    </div>
    <div
      className="show-on-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list__body"
  >
    <ExpenseListItem
      amount={1240}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={100}
      createdAt={-172800000}
      description="Food"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={12400}
      createdAt={345600000}
      description="Phone"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
